--- a/min.html
+++ b/min.html
@@ -28,7 +28,7 @@ var width = 960,
     height = 500;
 
 var projection = d3.geo.orthographic()
-    .scale(250)
+    .scale(380)
     .translate([width / 2, height / 2])
     .clipAngle(90);
 
@@ -47,10 +47,36 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
+
+var m0, o1;
+
 svg.on("mousemove", function() {
-  var p = d3.mouse(this);
-  projection.rotate([λ(p[0]), φ(p[1])]);
-  svg.selectAll("path").attr("d", path);
+  if (m0) {
+    var p = d3.mouse(this);
+    ords = [λ(p[0] + λ.invert(o1[0])), φ(p[1] + φ.invert(o1[1]))];
+    ords = [λ(p[0]) + o1[0], φ(p[1]) + o1[1]];
+    console.log(ords);
+    projection.rotate(ords);
+    svg.selectAll("path").attr("d", path);
+  }
+});
+svg.on("mousedown", function() {
+  m0 = [d3.event.pageX, d3.event.pageY];
+  //o0 = projection.origin();
+  o1 = projection.rotate();
+  //o1 = projection.rotate();
+  console.log('orig');
+  console.log(o1);
+  console.log('down');
+  console.log(d3.mouse(this));
+  d3.event.preventDefault();
+});
+
+svg.on("mouseup",function mouseup() {
+  if (m0) {
+    //mousemove();
+    m0 = null; o1 = null;
+  }
 });
 
 d3.json("/world-110m.json", function(error, world) {
