--- a/min.html
+++ b/min.html
@@ -19,7 +19,8 @@
       stroke-width: .5px;
     }
     .globe {
-      fill: none;
+      fill: lightblue;
+      filter: url(#glow);
     }
     .flight {
       stroke: #ee22ff;
@@ -54,12 +55,17 @@
       min-height: 90px;
     }
     body {
-      margin: 0;
+      margin: 0; padding: 0;
+      background-color: black;
+    }
+    #defs { //hax
+      width: 0; height: 0;
     }
   </style>
-  
+
   <ul class=album >
   </ul>
+  
   <script>
 
     var width = 960,
@@ -273,3 +279,26 @@
     fetchFB(token, loadLocationPoints);
   });
 </script>
+
+
+  <svg id="defs">
+        <defs>
+            <linearGradient id="gradBlue" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" style="stop-color:#005C99;stop-opacity:1" />
+                <stop offset="100%" style="stop-color:#0099FF;stop-opacity:1" />
+            </linearGradient>
+            <filter id="glow">
+                <feColorMatrix type="matrix"
+                    values=
+                    "0 0 0 0   0
+                     0 0 0 0.9 0 
+                     0 0 0 0.9 0 
+                     0 0 0 1   0"/>
+                <feGaussianBlur stdDeviation="5.5" result="coloredBlur"/>
+                <feMerge>
+                    <feMergeNode in="coloredBlur"/>
+                    <feMergeNode in="SourceGraphic"/>
+                </feMerge>
+            </filter>
+        </defs>
+    </svg>
