--- a/min.html
+++ b/min.html
@@ -37,22 +37,26 @@
       cursor: pointer;
     }
     .album {
+      position: relative;
+      top: -20px;
       padding: 0;
       margin: 0;
       width: 100%;
       height: 130px; 
-      overflow-x: scroll;
-      background-color: black;
+      overflow-x: hidden;
+      overflow-y: hidden;
       text-align: center;
       white-space: nowrap;
       list-style: none;
-      text-align: center;
     }
     .album li {
       display: inline-block;
       min-height: 90px;
       vertical-align: middle;
       margin-left: 3px;
+    }
+    .album li img {
+      border: 2px solid black;
     }
     body {
       margin: 0; padding: 0;
@@ -84,13 +88,17 @@
     <button id='fbLoad'>Load</button>
   </div>
   
+  <div class=highlight>
+    
+  </div>
+  
   <script>
 
     var width = 960,
     height = 500;
 
     var projection = d3.geo.orthographic()
-    .scale(420)
+    .scale(440)
     .translate([width / 2, height / 2])
     .clipAngle(90);
 
@@ -304,7 +312,7 @@
   <svg id="defs">
         <defs>
             <linearGradient id="gradBlue" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" style="stop-color:#8FD1D8;stop-opacity:1" />
+                <stop offset="0%" style="stop-color:#8FE1D8;stop-opacity:1" />
                 <stop offset="100%" style="stop-color:#8FB9D8;stop-opacity:1" />
             </linearGradient>
             <filter id="glow">
