some fadey shite

--- a/min.html
+++ b/min.html
@@ -50,6 +50,8 @@
       text-align: center;
       white-space: nowrap;
       list-style: none;
+      //TODO: looks like shit, maybe try a css transition?
+      -webkit-mask-image: -webkit-linear-gradient(right, rgba(0,0,0,0), rgba(0,0,0,1) 5%, rgba(0,0,0,1) 90%, rgba(0,0,0,0) 100%)
     }
     .album li {
       display: inline-block;
@@ -97,7 +99,7 @@
   </style>
 
   <div class=controls>
-    <input id='fbToken' value='CAACEdEose0cBAA4a2lr5PE8ZApPhbHQ5QZAPxFfWalOJGgwIgcSGKltJVG8j8gZAL7hzX8YKlamYqiaePv50TPTruNfSGKDko8fZChWUjndRmPEi5OUWJJ1z9jtAUrw7PZB06K5cjPKkdlwpO3t9dfblMvKGeec0ZD'>
+    <input id='fbToken' value='CAACEdEose0cBAHu2ZCNxkIZBuD7Q4NhcHJgzwyaKNJqPfZAXHBAg3iii7j4NaZBCyIMkOE8HrVXbfC7r18ZAluSKjN05mqzMf49OXG7ggS10Ae8cBVU4aeRfh2oGgqjnlVgky6YmhncpOmOsRcY7vrXDuBIuSkKYZD'>
     <button id='fbLoad'>Load</button>
   </div>
   
