--- a/min.html
+++ b/min.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
-  <script src="/d3.v3.js"></script>
-  <script src="/topojson.v1.js"></script>
-  <script src="/underscore-min.js"></script>
-  <script src="/fb_munger.js"></script>
+  <script src="d3.v3.js"></script>
+  <script src="topojson.v1.js"></script>
+  <script src="underscore-min.js"></script>
+  <script src="fb_munger.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 </head>
 <body>
