--- a/min.html
+++ b/min.html
@@ -16,7 +16,7 @@
 
     .boundary {
       fill: none;
-      stroke: #fff;
+      stroke: rgba(255,255,255,0.5);
       stroke-width: .5px;
     }
     .globe {
@@ -422,23 +422,18 @@
 
   <svg id="defs">
         <defs>
-            <linearGradient id="gradBlue" x1="0%" y1="0%" x2="100%" y2="100%">
-                <stop offset="0%" style="stop-color:rgb(160, 193, 247);stop-opacity:1" />
-                <stop offset="100%" style="stop-color:rgb(184,211,250);stop-opacity:0.8" />
-            </linearGradient>
             <radialGradient id="gradBlueRad" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
-                <stop offset="0%" style="stop-color:rgb(44,70,120);stop-opacity:1" />
-                <stop offset="50%" style="stop-color:rgb(64,90,140);stop-opacity:1" />
-                <stop offset="80%" style="stop-color:rgb(80,140,180);stop-opacity:1" />
-                <stop offset="94%" style="stop-color:rgb(140,160,220);stop-opacity:1" />
-                <stop offset="100%" style="stop-color:rgb(184,211,250);stop-opacity:1" />
+                <stop offset="0%" style="stop-color:#3e6189;stop-opacity:1" /> 
+                <stop offset="50%" style="stop-color:#3f648c;stop-opacity:1" />
+                <stop offset="80%" style="stop-color:#476f9d;stop-opacity:1" />
+                <stop offset="94%" style="stop-color:#567fad;stop-opacity:1" />
+                <stop offset="100%" style="stop-color:#8bb0d8;stop-opacity:1" />
             </radialGradient>
             <radialGradient id="gradGreenRad" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
-                <stop offset="0%" style="stop-color:#136600;stop-opacity:1" />
-                <stop offset="50%" style="stop-color:#157000;stop-opacity:1" />
-                <stop offset="80%" style="stop-color:#27a20a;stop-opacity:1" />
-                <stop offset="94%" style="stop-color:#2fa613;stop-opacity:1" />
-                <stop offset="100%" style="stop-color:#90ff75;stop-opacity:1" />
+                <stop offset="0%" style="stop-color:#25791e;stop-opacity:1" />
+                <stop offset="50%" style="stop-color:#298721;stop-opacity:1" />
+                <stop offset="94%" style="stop-color:#27a20a;stop-opacity:1" />
+                <stop offset="100%" style="stop-color:#2fa613;stop-opacity:1" />
             </radialGradient>
             <filter id="glow">
                 <feColorMatrix type="matrix"
