--- a/min.html
+++ b/min.html
@@ -361,7 +361,7 @@
     function getURLParameter(name) {
       return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null;
     }
-    var token = getURLParameter('fbToken');
+    var token = getURLParameter('access_token');
     $('#fbToken').val(token);
     fetchFB(token, loadLocationPoints);
   });
@@ -377,8 +377,6 @@
     });
     
     $('.timeslide').on('change', function(e,v,t) {
-      //var percent = $(this).val() / 1000.0;
-      //var index = Math.round(percent * locations.length);
       var pointIndex = parseInt($(this).val());
       var point = locations[pointIndex];
       console.log(point);
