--- a/min.html
+++ b/min.html
@@ -50,7 +50,7 @@
     }
     .highlightedCountry {
       fill: rgba(255,255,153,0.2); 
-      z-index: -1;
+      pointer-events: none;
     }
     .point {
       fill: #ee8822;
