--- a/min.html
+++ b/min.html
@@ -24,6 +24,7 @@
     }
     * { 
       font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
+      color: white;
     }
     .land {
       fill: #4F8256;
@@ -86,20 +87,14 @@
     .main { 
       position: relative;
     }
-    .controls { 
+    .devTools {
+      display: none;
       position: absolute;
       top: 0;
       right: 0;
       z-index: 50;
-      color: white;
       font-family: Arial, Helvetica, sans-serif;
       margin-right: 8px;
-    }
-    .controls i {
-      margin-right: 8px;
-    }
-    .devTools {
-      display: none;
     }
     .featured {
       position: absolute;
@@ -136,6 +131,14 @@
       top: -15px;
       color: white;
     }
+    .controls {
+      position: absolute;
+      bottom: 30px;
+      left: 15px;
+    }
+    .controls i {
+      margin-right: 8px;
+    }
     
     //style range slider
     fieldset{margin:0 auto; width:80%; padding:20px 0}
@@ -151,18 +154,18 @@
     
   </style>
 
-  <div class=controls>
-    <span class='devTools'>
-      <input id='fbToken'>
-      <input id='locationsJSON' type='hidden'>
-      <button id='fbLoad'>Load</button>
-      <a id='fbJSON'>JSON</a>
-    </span>
-    <a href='#' id='play'><i class="icon-play"></i><span>Play</span></a>
+  <div class='devTools'>
+    <input id='fbToken'>
+    <input id='locationsJSON' type='hidden'>
+    <button id='fbLoad'>Load</button>
+    <a id='fbJSON'>JSON</a>
   </div>
   
   
   <div class=main>
+    <div class=controls>
+      <a href='#' id='play'><i class="icon-play"></i><span>Play</span></a>
+    </div>
     <div class=featured>
       <a target='_blank'><img /></a>
       <ul class=links>
