--- a/min.html
+++ b/min.html
@@ -2,6 +2,8 @@
 <meta charset="utf-8">
 <head>
   <title>Where is dave?</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  
   <script src="d3.v3.js"></script>
   <script src="topojson.v1.js"></script>
   <script src="underscore-min.js"></script>
