Switch back to non-dev app

--- a/min.html
+++ b/min.html
@@ -781,8 +781,8 @@
     window.fbAsyncInit = function() {
       // init the FB JS SDK
       FB.init({
-        //appId      : '606058496081389',                        // App ID from the app dashboard
-        appId      : '149118415293232',                        // App ID from the app dashboard DEV
+        appId      : '606058496081389',                        // App ID from the app dashboard
+        //appId      : '149118415293232',                        // App ID from the app dashboard DEV
         status     : true                                 // Check Facebook Login status
       });
       
